Revert "Update index.html"
This reverts commit 601021047ff640a488242342125d588a5fafd2bf.

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="#" target="_blank">Chiung-Yi Tseng, Maisha thasin, Blessing Effiong, Somshubhra Roy, Danyang Zhang</a></span>
+                <a href="#" target="_blank">Research Team</a></span>
                   </div>
 
                   <div class="is-size-5 publication-authors">
@@ -194,7 +194,7 @@
       <h2 class="title">BibTeX</h2>
       <pre><code>@article{decipher_deep_math_2025,
   title={Decipher Deep Math: Numeric Rounding Behaviors in LLMs},
-  author={Chiung-Yi Tseng, Maisha thasin, Blessing Effiong, Somshubhra Roy, Danyang Zhang},
+  author={Anonymous authors - will reveal laters},
   journal={DeepMath},
   year={2025},
   note={Supplemental material for DeepMath 2025 Abstract}
